--- a/styles/style.css
+++ b/styles/style.css
@@ -578,3 +578,7 @@ footer a:hover {
 #registrationModal .modal-title {
   text-align: center;
 }
+
+#message {
+  padding: 0px 2px;
+}
